--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,10 +16,10 @@
 /* --- */
 
 html {
-  @media (width < 740px) {
+  @media (width < 768px) {
     font-size: 56.25%;
   }
-  @media (width >= 740px) {
+  @media (width >= 768px) {
     font-size: 62.5%;
   }
 }
@@ -84,14 +84,14 @@ p {
   text-wrap: pretty;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   text-wrap: balance;
-}
+} */
 
 input,
 textarea {
