feat: improve a11y with sr-only class and h1 tag

--- a/src/app/[locale]/_components/App/style.module.css
+++ b/src/app/[locale]/_components/App/style.module.css
@@ -5,6 +5,13 @@
   justify-content: center;
 }
 
+.srOnly {
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  width: 0;
+}
+
 .container {
   height: 362px;
   position: relative;
