--- a/src/app/[locale]/_components/MobileMenu/style.module.css
+++ b/src/app/[locale]/_components/MobileMenu/style.module.css
@@ -1,37 +1,33 @@
 .nav {
   backdrop-filter: blur(1px);
   background: rgba(var(--color-black-text), 0.95);
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  height: 48px;
+  display: flex;
+  height: calc(60px + env(safe-area-inset-bottom));
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .item {
-  align-items: center;
   border-top: 1px solid var(--color-gray);
-  display: flex;
-  font-size: 1.2rem;
-  justify-content: center;
-}
-
-.item:not(:first-child) {
-  border-left: 1px solid var(--color-gray);
+  flex: 1;
+  font-size: 1rem;
 }
 
 .link {
   align-items: center;
   color: inherit;
   display: flex;
+  flex-direction: column;
+  gap: 3px;
   height: 100%;
   justify-content: center;
   text-decoration: none;
   width: 100%;
 }
 
-.label {
-  display: inline-block;
+.active {
+  color: var(--color-brand-blue);
 }
 
-.active {
-  border-bottom: 1px solid var(--color-brand-red);
+.label {
+  display: inline-block;
 }
