feat: add social links to footer/more and svgs

--- a/src/app/[locale]/more/_components/More/style.module.css
+++ b/src/app/[locale]/more/_components/More/style.module.css
@@ -52,6 +52,11 @@
   gap: 12px;
 }
 
+.iconLink {
+  border-radius: 50dvmax;
+  overflow: hidden;
+}
+
 @media (width >= 768px) {
   .container > .item {
     display: none;
